@@ -1,3 +1,13 @@
+2012-04-12  Csaba Osztrogonác  <ossy@webkit.org>
+
+        [Qt][ARM] Buildfix after r113934.
+
+        Reviewed by Zoltan Herczeg.
+
+        * assembler/MacroAssemblerARM.h:
+        (JSC::MacroAssemblerARM::compare8):
+        (MacroAssemblerARM):
+
 2012-04-11  Filip Pizlo  <fpizlo@apple.com>
 
         It is incorrect to short-circuit Branch(LogicalNot(@a)) if boolean speculations on @a may fail
